# motion-extractor

./: CMakeLists.txt  README.md  brun_linux.sh
src/: main.cpp
